test/function/fail/mut_self_argument.stderr
error: The macro function should be free standing
 --> test/function/fail/mut_self_argument.rs:5:5
  |
5 |     fn test(&mut self) -> proc::TokenStream {
  |     ^^
